--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -17,7 +17,7 @@
         <mat-card class="text-center">
           <mat-card-header>
             <div mat-card-avatar class="mr-2">
-                <img src="https://openweathermap.org/img/w/{{current.weather[0].icon}}.png" />
+                <img src="{{baseImgSrc}}{{current.weather[0].icon}}.png" />
             </div>
             <mat-card-title><h6>{{current.dt * 1000 | date }}</h6></mat-card-title>
             <mat-card-subtitle>{{current.weather[0].description}}</mat-card-subtitle>
